.metadata/.plugins/org.eclipse.cdt.ui/Assign1.build.log
00:12:41 **** Incremental Build of configuration Debug for project Assign1 ****
make -j16 all 
arm-none-eabi-gcc "../Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DSTM32L4 -DSTM32 -DDEBUG -DSTM32L475VGTx -c -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Src/main.d" -MT"Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=soft -mthumb -o "Src/main.o"
../Src/main.c: In function 'main':
../Src/main.c:99:47: warning: excess elements in array initializer
   99 |         int result[F][S] = {{F,S},{0,0},{0,0},{0,0}};
      |                                               ^
../Src/main.c:99:47: note: (near initialization for 'result')
../Src/main.c:101:24: error: 'building' undeclared (first use in this function)
  101 |         asm_func((int*)building, (int*)entry, (int*)exit, (int*)result);
      |                        ^~~~~~~~
../Src/main.c:101:24: note: each undeclared identifier is reported only once for each function it appears in
../Src/main.c:101:40: error: 'entry' undeclared (first use in this function)
  101 |         asm_func((int*)building, (int*)entry, (int*)exit, (int*)result);
      |                                        ^~~~~
../Src/main.c:101:53: error: 'exit' undeclared (first use in this function)
  101 |         asm_func((int*)building, (int*)entry, (int*)exit, (int*)result);
      |                                                     ^~~~
../Src/main.c:22:1: note: 'exit' is defined in header '<stdlib.h>'; did you forget to '#include <stdlib.h>'?
   21 | #include "stdio.h"
  +++ |+#include <stdlib.h>
   22 | 
make: *** [Src/subdir.mk:31: Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

00:12:41 Build Failed. 4 errors, 1 warnings. (took 257ms)

